# zstellar-wordle

./: .gitignore  Cargo.toml  LICENSE  README.md  claude.md  deployment.md  simplistic_readme.md  testnet_readme.md
circuit/: Nargo.toml
circuit-word-commit/: Prover.toml
circuit-word-commit/src/: main.nr
circuit-word-guess/: Nargo.toml  Prover.toml
circuit-word-guess/src/: main.nr
circuit/src/: main.nr
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: circuit_vk.json  merkle-tree-keccak-levels.json  merkle-tree-keccak.json  merkle-tree-poseidon-levels.json  merkle-tree-poseidon.json  word_commit_vk.json
frontend/src/: App.tsx  config.ts  gameLogic.ts  gameState.ts  generateProof.ts  generateWordCommitProof.ts  index.css  merkleProof.ts  poseidonMerkleProof.ts  soroban.ts  utils.ts
frontend/src/circuit/: circuit.json
frontend/src/circuit-word-commit/: circuit.json
frontend/src/components/: ActiveGame.tsx  DrawPhase.tsx  GameLoading.tsx  GameOverPanel.tsx  Header.tsx  HowToPlay.tsx  Lobby.tsx  (+6 more)
js-scripts/: generateProverToml.js  merkle-tree-poseidon.json  merkleTree.js  merkleTreeKeccak.js  merkleTreePoseidon.js  package-lock.json  package.json
scripts/: convert_poseidon_tree.py  run_localnet_e2e.sh  test_merkle.js  test_merkle.sh
scripts/invoke_ultrahonk/: invoke_ultrahonk.ts
src/: lib.rs
tests/: build_circuits.sh  integration_tests.rs
ultrahonk-soroban-verifier/tests/: build_circuits.sh  verifier_test.rs
word-commit-verifier/: Cargo.toml
word-commit-verifier/src/: lib.rs
word-guess-verifier/tests/: verifier_test.rs
wordle-soroban-verifier/: Cargo.toml
wordle-soroban-verifier/src/: ec.rs
(+6 files in other folders)
