[package]
name = "rs-soroban-ultrahonk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk.git", rev = "eb829477e1bcd6305048d6715233598783d8b915", default-features = false, features = ["alloc"] }
ultrahonk_soroban_verifier = { path = "word-guess-verifier", default-features = false }

[dev-dependencies]
# Enable test helpers for local unit tests
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk.git", rev = "eb829477e1bcd6305048d6715233598783d8b915", features = ["testutils", "alloc"] }
soroban-env-host = { git = "https://github.com/stellar/rs-soroban-env", rev = "0a0c2df704edeb3cdafabfcc759eddccd6775337" }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"
strip = true
